sfSandBoxCode/force-app/main/default/objects/FFA_Config_Object__c/FFA_Config_Object__c.object-meta.xml
<CustomObject>
    <description>This is a junction object which enables a normal user to choose, dimension 1,2,3 and 4 , as well as GLA accounts</description>
    <label>FFA Config Object</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FFA Config Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>