sfSandBoxCode/force-app/main/default/objects/FFA_Config_Object__c/fields/Delegate_s_Threshold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Delegate_s_Threshold_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Delegate&#39;s Threshold Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>