sfSandBoxCode/force-app/main/default/objects/FFA_Config_Object__c/fields/Delegated_approver__c.field-meta.xml
<CustomField>
    <fullName>Delegated_approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FFA_Config_Objects1</relationshipName>
    <type>Lookup</type>
</CustomField>