sfSandBoxCode/force-app/main/default/objects/FFA_Config_Object__c/fields/Delegated_Fleet_Approver__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Fleet_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated Fleet Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FFA_Config_Objects2</relationshipName>
    <type>Lookup</type>
</CustomField>