sfSandBoxCode/force-app/main/default/objects/FFA_Config_Object__c/fields/FFA_Dim_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>FFA_Dim_Abbreviation__c</fullName>
    <label>FFA Dim Abbreviation</label>
    <length>225</length>
    <type>Text</type>
</CustomField>