sfSandBoxCode/force-app/main/default/objects/FFA_Config_Object__c/fields/Team_Lead_Employee_Account__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Employee_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead Employee Account</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>FFA Config Objects</relationshipLabel>
    <relationshipName>FFA_Config_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>