sfSandBoxCode/force-app/main/default/objects/FFA_Config_Object__c/fields/Teamlead__c.field-meta.xml
<CustomField>
    <fullName>Teamlead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teamlead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FFA_Config_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>