sfSandBoxCode/force-app/main/default/objects/FFA_Config_Object__c/validationRules/Verify_delegate_approver.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_delegate_approver</fullName>
    <active>true</active>
    <description>Delegate approver has to be set if type is DIM 1 and isActive is true</description>
    <errorConditionFormula>AND(
 isActive__c = true,
 Type__c = &quot;dim1&quot;,
 ISBLANK( Delegated_approver__c )
)</errorConditionFormula>
    <errorDisplayField>Delegated_approver__c</errorDisplayField>
    <errorMessage>Kindly specify the delegate approver if the record is Active</errorMessage>
</ValidationRule>