sfSandBoxCode/force-app/main/default/objects/FFA_Config_Object__c/validationRules/Verify_teamlead.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_teamlead</fullName>
    <active>true</active>
    <description>Teamlead has to be set if type is DIM 1 and isActive is true</description>
    <errorConditionFormula>AND(
 isActive__c = true,
 Type__c = &quot;dim1&quot;,
 ISBLANK(Teamlead__c)
)</errorConditionFormula>
    <errorDisplayField>Teamlead__c</errorDisplayField>
    <errorMessage>Kindly specify the team-lead if the record is Active</errorMessage>
</ValidationRule>