sfSandBoxCode/force-app/main/default/objects/FFA_Config_Object__c/listViews/Company.listView-meta.xml
<ListView>
    <fullName>Company</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Teamlead__c</columns>
    <columns>Delegated_approver__c</columns>
    <columns>Delegate_s_Threshold_Amount__c</columns>
    <columns>isActive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>FFA_Dim_Abbreviation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FFA_Dim_Abbreviation__c</field>
        <operation>equals</operation>
    </filters>
    <label>Company</label>
    <language>en_US</language>
</ListView>