sfSandBoxCode/force-app/main/default/objects/FFA_Config_Object__c/listViews/Dimension_1.listView-meta.xml
<ListView>
    <fullName>Dimension_1</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Teamlead__c</columns>
    <columns>Delegated_approver__c</columns>
    <columns>Delegated_Fleet_Approver__c</columns>
    <columns>isActive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>dim1</value>
    </filters>
    <label>Dimension 1</label>
    <language>en_US</language>
</ListView>